Mrs Shergill's Suggested Changes

--- a/Laurels/Laurels.html
+++ b/Laurels/Laurels.html
@@ -92,8 +92,8 @@
     <table>
         <tr class="heading-row">
             <th>S No.</th>
-            <th>Competion/Event</th>
-            <th>Particpants/Winner</th>
+            <th>Competition/Event</th>
+            <th>Participants/Winner</th>
             <th>Prizes/Position</th>
         </tr>
 
