--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -70,7 +70,7 @@
         .department>.d-list {
             flex: 1;
             padding: 10px;
-            padding-left: 30px;
+            padding-left: 50px;
         }
 
         @media (max-width: 600px) {
@@ -83,7 +83,7 @@
 </head>
 
 <body>
-    <h1>ILS Teaching Staff</h1>
+    <h1>ILS Staff</h1>
     <section class="department">
         <div class="d-img"><img src="./Teacher Images/Office.svg"></div>
         <div class="d-list">
