--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
-    <meta name="keywords" content="Flying High Magazine, Flying, High, Magazine, Indian Language School, Indian, Language, School, Gaurav Shah, Sneha Mohnani, Shergill, 2020-21, 2020, 2021, History, Historic Magazine, ILS, Coded">
-    <meta name="description" content="The historic 2020-21 Flying High Magazine written, designed and coded by students.">
+    <meta name="keywords"
+        content="Flying High Magazine, Flying, High, Magazine, Indian Language School, Indian, Language, School, Gaurav Shah, Sneha Mohnani, Shergill, 2020-21, 2020, 2021, History, Historic Magazine, ILS, Coded">
+    <meta name="description"
+        content="The historic 2020-21 Flying High Magazine written, designed and coded by students.">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Gaurav Shah and Team">
     <meta name="google-site-verification" content="RC7TkAa_koNR1XtFajNFW6PfNgWbkOdE-jhFul3Stxk" />
@@ -56,8 +58,7 @@
                         Honour Roll</span></div>
                 <div class="page-card button " onclick="window.location.href='Laurels/Laurels.html' "><span>
                         Laurels</span></div>
-                <div class="page-card button " onclick="window.location.href='Teachers/index.html' "><span> ILS Teaching
-                        Staff</span></div>
+                <div class="page-card button " onclick="window.location.href='Teachers/index.html' "><span> ILS Staff</span></div>
                 <div class="page-card button " onclick="window.location.href='Student_council/council.html' "><span>
                         Student Council</span></div>
                 <div class="page-card button " onclick="window.location.href='Committees/C_List.html' "><span>
@@ -121,18 +122,23 @@
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Manisha Jain</h3>
                     <p style="text-align: center; font-size: 20px;">Parental Responsibility</p><br>
-                    <p>In March 2020, no one could have imagined that COVID &ndash; 19 will still have its presence around
+                    <p>In March 2020, no one could have imagined that COVID &ndash; 19 will still have its presence
+                        around
                         us till now.</p>
                     <p><br></p>
-                    <p>At that time, the crisis forced the education systems worldwide to find alternatives to face-to-face
-                        instruction. As a result, online teaching and learning have been used by teachers and students on an
+                    <p>At that time, the crisis forced the education systems worldwide to find alternatives to
+                        face-to-face
+                        instruction. As a result, online teaching and learning have been used by teachers and students
+                        on an
                         unprecedented scale. Both parents and teachers play a fundamental role in supporting students to
-                        develop these crucial attitudes, particularly in the current situation to make the most of digital
+                        develop these crucial attitudes, particularly in the current situation to make the most of
+                        digital
                         learning.</p>
                     <p><br></p>
                     <p>With children currently not able to study in classrooms, the importance of learning at home is
                         amplified and the task of supporting children&rsquo;s learning has fallen on parents at a much
-                        larger rate. This is a significant burden, particularly for those who are also teleworking and those
+                        larger rate. This is a significant burden, particularly for those who are also teleworking and
+                        those
                         with limited schooling themselves.</p>
                     <p><br></p>
                     <p>Parents have four roles, namely:</p>
@@ -140,11 +146,14 @@
                     <ol>
                         <li>as teachers at home, by controlling the child&apos;s time and creating a learning atmosphere
                             that is comfortable for children in doing the tasks given by the teacher;&nbsp;</li>
-                        <li>as a facilitator, because parents provide the infrastructure for their children in carrying out
+                        <li>as a facilitator, because parents provide the infrastructure for their children in carrying
+                            out
                             distance learning; &nbsp;</li>
-                        <li>as a motivator, namely, parents provide enthusiasm and support to their children in carrying out
+                        <li>as a motivator, namely, parents provide enthusiasm and support to their children in carrying
+                            out
                             learning; and&nbsp;</li>
-                        <li>as the influence or director, where parents can guide their children in learning remotely from
+                        <li>as the influence or director, where parents can guide their children in learning remotely
+                            from
                             home.</li>
                     </ol>
                     </p>
@@ -156,14 +165,26 @@
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
                     <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
-                    <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था कि विदेशी धरती मेरी कर्मभूमि बनेगी | बड़े संकोच से एक शिक्षिका की भूमिका निभाने का संकल्प लिया | नि:संदेह यह यात्रा उतनी आसान नहीं थी परंतु मन के कोने में ये पंक्तियाँ सदा गूँजती रहीं --</p><br>
+                    <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब
+                        पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था
+                        कि विदेशी धरती मेरी कर्मभूमि बनेगी | बड़े संकोच से एक शिक्षिका की भूमिका निभाने का संकल्प लिया |
+                        नि:संदेह यह यात्रा उतनी आसान नहीं थी परंतु मन के कोने में ये पंक्तियाँ सदा गूँजती रहीं --</p>
+                    <br>
                     <p>तू न थकेगा कभी,</p>
                     <p>तू न रुकेगा कभी,</p>
                     <p>तू न मुड़ेगा कभी,</p>
                     <p>कर शपथ, कर शपथ, कर शपथ !</p> <br>
-                    <p>प्रतिदिन सूर्योदय के साथ ही विद्यालय जाने की तैयारी शुरू हो जाती है। ILS के प्रांगण में प्रार्थना सभा, बच्चों की गूंज और फिर एक के बाद एक पीरियड की घंटी और उसी के अनुसार कक्षा में पढ़ाने के लिए जाना। वो Annual Day , Sports Day , PTM , Bal Din &nbsp;, Elections और न जाने कितनी प्रतियोगिताएँ | प्रति वर्ष काम में नवीनता , प्रतिस्पर्धा , कुछ नया करने की तीव्र इच्छा सदा बनी रही &nbsp;ILS मेरे जीवन का एक महत्वपूर्ण अंग बन गया ।</p><br>
-                    <p>हर वर्ष नए बच्चे आते हैं और कुछ &nbsp;छोड़कर चले जाते हैं । मैं बड़ा गर्व अनुभव करती हूँ जब पुराने विद्यार्थियों को विश्व के कोने - कोने में उच्च पदों पर आसीन देखती हूँ | मेरे साथ कार्य करने वाली कई अध्यापिकाएं स्कूल छोड़कर जा चुकी हैं लेकिन आज भी उन सब की याद मेरे मन में बनी हुई है ।&nbsp;</p>
-                    <p>इन तीन दशकों में ILS की प्रगति देखकर मन हर्षित हो उठता है। ईश्वर से यही प्रार्थना है कि ILS परिवार इसी तरह प्रगति पथ पर अग्रसर होता रहे।</p><br>
+                    <p>प्रतिदिन सूर्योदय के साथ ही विद्यालय जाने की तैयारी शुरू हो जाती है। ILS के प्रांगण में प्रार्थना
+                        सभा, बच्चों की गूंज और फिर एक के बाद एक पीरियड की घंटी और उसी के अनुसार कक्षा में पढ़ाने के लिए
+                        जाना। वो Annual Day , Sports Day , PTM , Bal Din &nbsp;, Elections और न जाने कितनी प्रतियोगिताएँ
+                        | प्रति वर्ष काम में नवीनता , प्रतिस्पर्धा , कुछ नया करने की तीव्र इच्छा सदा बनी रही &nbsp;ILS
+                        मेरे जीवन का एक महत्वपूर्ण अंग बन गया ।</p><br>
+                    <p>हर वर्ष नए बच्चे आते हैं और कुछ &nbsp;छोड़कर चले जाते हैं । मैं बड़ा गर्व अनुभव करती हूँ जब
+                        पुराने विद्यार्थियों को विश्व के कोने - कोने में उच्च पदों पर आसीन देखती हूँ | मेरे साथ कार्य
+                        करने वाली कई अध्यापिकाएं स्कूल छोड़कर जा चुकी हैं लेकिन आज भी उन सब की याद मेरे मन में बनी हुई
+                        है ।&nbsp;</p>
+                    <p>इन तीन दशकों में ILS की प्रगति देखकर मन हर्षित हो उठता है। ईश्वर से यही प्रार्थना है कि ILS
+                        परिवार इसी तरह प्रगति पथ पर अग्रसर होता रहे।</p><br>
                     <p style='text-align: right; font-weight: bold;'>ईशिता यादव&nbsp;</p>
                     <p><br></p>
 
@@ -231,7 +252,7 @@
                 style="padding: 10px; font-size: 20px; border-radius: 50px; width: 200px; margin-left: calc(50% - 100px); border: none; outline: none; cursor: pointer;">
                 See Pictures </button>
         </section>
-<!--ADD IMAGES FROM 30 YEAR PARTY-->
+        <!--ADD IMAGES FROM 30 YEAR PARTY-->
         <section class="head-msgs">
             <h2>Student Heads' Message</h2>
             <div class="head-msg" style="margin-top: 50px">
