--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILS Teaching Staff</title>
+    <title>ILS Staff</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
@@ -48,6 +48,8 @@
             gap: 20px;
             height: fit-content;
             margin-top: 20px;
+            padding-top: 30px;
+            padding-bottom: 30px;
         }
 
         .department:nth-child(even) {
@@ -72,7 +74,8 @@
         .department>.d-list {
             flex: 1;
             padding: 10px;
-            padding-left: 50px;
+            padding-left: 10px;
+            
         }
 
         @media (max-width: 600px) {
