--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -75,7 +75,12 @@
             flex: 1;
             padding: 10px;
             padding-left: 10px;
-            
+            display: flex;
+            align-items: center;
+        }
+
+        ol{
+        padding-left: 30px;
         }
 
         @media (max-width: 600px) {
