--- a/HomePage/Yadav.html
+++ b/HomePage/Yadav.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1>30 Glorious Years</h1>
-    <img src="" alt="Mrs Yadav Celebration" class="img">
+    <img src="YadavCelebration.png" alt="Mrs Yadav Celebration" class="img">
 
     <style>
         * {
