--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
                 </div>
                 <div class="heads headboy">
-                    <img src="Yadav.png" alt="Mrs Yadav" class="head-img"
+                    <img src="Yadav.jpg" alt="Mrs Yadav" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
                     <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
