--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="head-msg" style="margin-top: 50px">
                 <div class="heads headgirl">
                     <img src="Jain.png" alt="Mrs Jain" class="head-img"
-                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
+                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Manisha Jain</h3>
                     <p style="text-align: center; font-size: 20px;">Parental Responsibility</p><br>
                     <p>In March 2020, no one could have imagined that COVID &ndash; 19 will still have its presence
@@ -162,7 +162,7 @@
                 </div>
                 <div class="heads headboy">
                     <img src="Yadav.jpg" alt="Mrs Yadav" class="head-img"
-                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
+                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
                     <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
                     <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब
