--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -75,6 +75,8 @@
             flex: 1;
             padding: 10px;
             padding-left: 10px;
+            display: flex;
+            align-content: center;
         }
 
         ol{
