--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -74,9 +74,11 @@
         .department>.d-list {
             flex: 1;
             padding: 10px;
-            padding-left: 10px;
-            display: flex;
-            align-content: center;
+            padding-left: 30px;
+        }
+
+        h2{
+            margin-bottom: 20px;
         }
 
         ol{
