--- a/HomePage/Yadav.html
+++ b/HomePage/Yadav.html
@@ -45,9 +45,7 @@
         }
 
         .img {
-            width: 80vw;
-            margin-left: 10vw;
-            margin-right: 10vw;
+            width: 100%;
         }
     </style>
     <!--Navigation Menu-->
