--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Year at a glance</h1>
-    <p style="text-align: center; width: 100vw; padding: 20px 10vw; background-color: #0D1321;">Click on the youtube icons to see the newsletter of the month.</p>
+    <p style="text-align: center; width: 100%; padding: 20px 10vw; padding-top: 0px; background-color: #0D1321;">Click on the youtube icons to see the newsletter of the month.</p>
     <div class="line"></div>
     <div class="content">
         <div class="month april-may">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="month july">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=b70p9Z08pO4'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=b70p9Z08pO4'" style="font-size:20px;"></i>
             <h2>July</h2>
             <div class="events">
                 <div class="event">Mental Health Awareness Session Ms.Aanchal Vashistha</div>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="month august">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=7_nGpnXaJFk'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=7_nGpnXaJFk'" style="font-size:20px;"></i>
             <h2>August</h2>
             <div class="events">
                 <div class="event">Zero Hour Online Debate Competition <img style="border-radius: 5px;" src="./Images/August1.png" alt="Zero Hour Online Debate Competition"></div>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="month september">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=bZGA79eTaCM'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=bZGA79eTaCM'" style="font-size:20px;"></i>
             <h2>September</h2>
             <div class="events">
                 <div class="event">Teachers’ Day Celebrations<img style="border-radius: 5px;" src="./Images/September1.png" alt="Teachers’ Day Celebrations"> </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="month october">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=G8szLjob49A'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=G8szLjob49A'" style="font-size:20px;"></i>
             <h2>October</h2>
             <div class="events">
                 <div class="event">Gandhi Jayanti</div>
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="month november">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=mxMw8fa1im4'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=mxMw8fa1im4'" style="font-size:20px;"></i>
             <h2>November</h2>
             <div class="events">
                 <div class="event">IT Integrated Learning Webinars <img style="border-radius: 5px;" src="./Images/November1.png" alt="It Integrated Learning Webinars"></div>
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="month december">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=tM-EQhEuFQE'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=tM-EQhEuFQE'" style="font-size:20px;"></i>
             <h2>December</h2>
             <div class="events">
                 <div class="event">Fit India<img style="border-radius: 5px;" src="./Images/December1.png" alt="Fit India"></div>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="month january">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=IXaE5QHYqas'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=IXaE5QHYqas'" style="font-size:20px;"></i>
             <h2>January</h2>
             <div class="events">
                 <div class="event">Zenik International Olympiad</div>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="month february">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=HNZzYFRFJh0'" style="font-size:20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=HNZzYFRFJh0'" style="font-size:20px;"></i>
             <h2>February</h2>
             <div class="events">
                 <div class="event">Poetry Recitation</div>
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="month march">
-            <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=KyX_mA0WCB0'" style="font-size: 20px;"></i>
+            <i title="Click to see newsletter" class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=KyX_mA0WCB0'" style="font-size: 20px;"></i>
             <h2>March</h2>
             <div class="events">
 
@@ -193,6 +193,7 @@
             padding: 10px;
             position: absolute;
             left: 0px;
+            cursor: pointer;
         }
         
         img{
