--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="heads headboy">
                     <img src="Yadav.jpg" alt="Mrs Yadav" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
-                    <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
+                    <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadav</h3>
                     <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
                     <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब
                         पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था
