--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
             .trustee {
                 border-radius: 10px;
-                background-color: #101020;
+                background-color: #050514;
                 padding: 10px;
                 text-align: center;
                 font-size: 25px;
@@ -741,6 +741,7 @@
             .interviewVideoSection>.interviewText {
                 flex: 1;
                 padding: 10px 50px;
+                color: white;
             }
 
             @media (max-width: 800px) {
