Mission Vision Changes - BG Color White

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
         </section>
         <section class="statements" style="background-color: transparent;">
-            <div class="vis is-statement">
-                <h2>Vision Statement</h2>
-                <p class="vision-statement">To nurture 21st Century Innovative Lifelong Learners who are equipped with
+            <div class="vis is-statement" style="background-color: white;">
+                <h2 style="color: black;">Vision Statement</h2>
+                <p class="vision-statement" style="color: black;">To nurture 21st Century Innovative Lifelong Learners who are equipped with
                     Life Skills and Social Values to become Global Citizens.</p>
             </div>
-            <div class="mis is-statement">
-                <h2>Mission Statement</h2>
-                <ul class="mission-statement">
+            <div class="mis is-statement" style="background-color: white;">
+                <h2 style="color: black;">Mission Statement</h2>
+                <ul class="mission-statement" style="color: black;">
                     <li>To Promote Self- Directed Learning based on Learning Outcomes.</li>
                     <li>To Integrate Art and Innovation in Teaching and Learning.</li>
                     <li>To Foster a culture for Personal , Emotional and Social Development.</li>
