Video Margin Adjustment

--- a/index.html
+++ b/index.html
@@ -733,7 +733,8 @@
             .interviewVideoSection>.iframeVideo {
                 margin-left: 50px;
                 width: 50vw;
-                height: calc(50vw * 9/16);
+                height: calc(100vw - 100px);
+                width: calc((100vw - 100px)* 9/16);
                 background-color: black;
                 border-radius: 20px;
             }
