Video Margin Adjustment

--- a/index.html
+++ b/index.html
@@ -733,8 +733,7 @@
             .interviewVideoSection>.iframeVideo {
                 margin-left: 50px;
                 width: 50vw;
-                height: calc(100vw - 100px);
-                width: calc((100vw - 100px)* 9/16);
+                height: calc(50vw * 9/16);
                 background-color: black;
                 border-radius: 20px;
             }
@@ -755,7 +754,7 @@
                     width: 100vw;
                     height: calc(100vw * 9/16);
                     border-radius: 0;
-
+                    margin: 0;
                 }
             }
         </style>
