--- a/index.html
+++ b/index.html
@@ -48,26 +48,12 @@
                 </ul>
             </div>
         </section>
-        <section class="interviewVideoSection">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3_xBjfpZufs"
-                title="An Interview With Mrs Gupta" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen class="iframeVideo"></iframe>
-            <div class="interviewText">
-                <h2>Mrs Sonali Gupta interviewed by Gaurav Shah</h2><br>
-                <p>
-                    2020 has been an unprecedented year for all of us. So much changed in the span of a few days. But,
-                    rather than focus on the negatives, we want to celebrate our triumphs during 2020. All of us,
-                    teachers,
-                    students and staff have accomplished more than we could have ever dreamed of. To recount Indian
-                    Language
-                    School's victories, I interviewed Mrs Sonali Gupta, our principal.
-                </p>
-            </div>
-        </section>
+
         <section class="page-list">
             <h2 style=" margin: 0; margin-bottom: 30px;">Pages</h2>
             <div class="pages">
+                <div class="page-card button " onclick="window.location.href='HomePage/Advertisements.html' "><span>
+                        Advertisements</span></div>
                 <div class="page-card button " onclick="window.location.href='HomePage/Editorial.html' "><span>
                         Editorial</span></div>
                 <div class="page-card button " onclick="window.location.href='Honour Roll/Honour_Roll.html' "><span>
@@ -128,6 +114,24 @@
                     Indian Language School. </p><br>
                 <p>Take care! I look forward to seeing you all in person. </p><br><br>
                 <h3 style="text-align: right;">- Mrs. Sonali Gupta</h3>
+            </div>
+        </section>
+        
+                <section class="interviewVideoSection">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3_xBjfpZufs"
+                title="An Interview With Mrs Gupta" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen class="iframeVideo"></iframe>
+            <div class="interviewText">
+                <h2>Mrs Sonali Gupta interviewed by Gaurav Shah</h2><br>
+                <p>
+                    2020 has been an unprecedented year for all of us. So much changed in the span of a few days. But,
+                    rather than focus on the negatives, we want to celebrate our triumphs during 2020. All of us,
+                    teachers,
+                    students and staff have accomplished more than we could have ever dreamed of. To recount Indian
+                    Language
+                    School's victories, I interviewed Mrs Sonali Gupta, our principal.
+                </p>
             </div>
         </section>
 
@@ -658,8 +662,8 @@
             .pages {
                 display: -ms-grid;
                 display: grid;
-                -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
-                grid-template-columns: 1fr 1fr 1fr;
+                -ms-grid-columns: 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
                 grid-gap: 30px;
             }
 
