--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         Advertisements</span></div>
                 <div class="page-card button " onclick="window.location.href='Gallery/gallery-list.html' "><span>
                         Gallery</span></div>
-                <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' ">
+                <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' " id="pagesCenter">
                     <span>Timeline</span>
                 </div>
 
@@ -659,9 +659,13 @@
             .pages {
                 display: -ms-grid;
                 display: grid;
-                -ms-grid-columns: 1fr 1fr;
-                grid-template-columns: 1fr 1fr;
+                -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
+                grid-template-columns: 1fr 1fr 1fr;
                 grid-gap: 30px;
+            }
+            
+            #pagesCenter{
+                grid-template-columns: 2/3;
             }
 
             .vision-statement {
