--- a/index.html
+++ b/index.html
@@ -663,10 +663,10 @@
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-gap: 30px;
             }
-            
+            @media (min-width: 900px){
             #pagesCenter{
                 grid-template-columns: 2/3;
-            }
+                }}
 
             .vision-statement {
                 font-size: 20px;
