--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             }
             @media (min-width: 900px){
             #pagesCenter{
-                grid-template-columns: 2/3;
+                grid-column: 2/3;
                 }}
 
             .vision-statement {
