--- a/embed3.html
+++ b/embed3.html
@@ -25,7 +25,7 @@
                 <div class="nav gallery"><a href='Gallery/gallery-list.html' target='_blank'>Gallery</a></div>
 
 
-                <div class="nav teachers"><a href='Teachers/index.html' target='_blank'>ILS Teaching Staff</a></div>
+                <div class="nav teachers"><a href='Teachers/index.html' target='_blank'>ILS Staff</a></div>
 
                 <div class="nav more" onclick="window.location.href='more.html'">More...</div>
             </div>
