--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h2>Vice Principals' Message</h2>
             <div class="head-msg" style="margin-top: 50px">
                 <div class="heads headgirl">
-                    <img src="Jain.png" alt="Mrs Jain" class="head-img"
+                    <img src="Jain.jpeg" alt="Mrs Jain" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Manisha Jain</h3>
                     <p style="text-align: center; font-size: 20px;">Parental Responsibility</p><br>
@@ -179,7 +179,7 @@
                     <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
                 </div>
                 <div class="heads headboy">
-                    <img src="Yadav.jpg" alt="Mrs Yadav" class="head-img"
+                    <img src="Yadav.jpeg" alt="Mrs Yadav" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadav</h3>
                     <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
