--- a/index.html
+++ b/index.html
@@ -361,8 +361,7 @@
         </section>
         <section class="footer">
             <h3 class="footer-text footer-m">Flying High Magazine 2020-21</h3>
-            <p class="footer-by footer-m">Designed by <abbr title="Editorial"><a
-                        href="./HomePage/./Editorial.html">Gaurav Shah and Team</a></abbr></p>
+            <p class="footer-by footer-m">Designed by<a href="./HomePage/./Editorial.html" title="Editorial">Gaurav Shah and Team</a></p>
             <p></p>
         </section>
         <script>
