--- a/HomePage/Advertisements.html
+++ b/HomePage/Advertisements.html
@@ -12,15 +12,12 @@
 <body>
 
     <div class="ads">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
-        <img src="./Advertisements/" alt="">
+        <img src="./Advertisements/1.png" alt="">
+        <img src="./Advertisements/2.png" alt="">
+        <img src="./Advertisements/3.png" alt="">
+        <img src="./Advertisements/4.jpg" alt="">
+        <img src="./Advertisements/5.jpg" alt="">
+        <img src="./Advertisements/6.png" alt="">
     </div>
     <style>
         * {
