--- a/HomePage/Advertisements.html
+++ b/HomePage/Advertisements.html
@@ -12,9 +12,9 @@
 <body>
 
     <div class="ads">
-        <img src="./Advertisements/1.png" alt="" class="ad">
-        <img src="./Advertisements/2.png" alt="" class="ad">
-        <img src="./Advertisements/3.png" alt="" class="ad">
+        <img src="./Advertisements/1.PNG" alt="" class="ad">
+        <img src="./Advertisements/2.PNG" alt="" class="ad">
+        <img src="./Advertisements/3.PNG" alt="" class="ad">
         <img src="./Advertisements/4.jpg" alt="" class="ad">
         <img src="./Advertisements/5.jpg" alt="" class="ad">
         <img src="./Advertisements/6.png" alt="" class="ad">
