--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <section class="head-msgs">
             <h2>Vice Principals' Message</h2>
             <div class="head-msg" style="margin-top: 50px">
-                <div class="heads headgirl">
+                <div class="heads">
                     <img src="Jain.jpeg" alt="Mrs Jain" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Manisha Jain</h3>
@@ -178,7 +178,7 @@
                     <p><br></p>
                     <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
                 </div>
-                <div class="heads headboy">
+                <div class="heads">
                     <img src="Yadav.jpeg" alt="Mrs Yadav" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px); object-fit: cover;">
                     <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadav</h3>
