--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 frameborder="0 " width="100% " height="100% "></iframe>
         </section>
         <section class="principal">
-            <img src="./HomePage/Mrs Sonali Gupta.png" alt="Principal Image " class="p-img">
+            <img src="./HomePage/Mrs Sonali Gupta.svg" alt="Principal Image " class="p-img">
             <div class="p-message">
                 <h2 class="p-title">Principal's Message</h2>
                 <p> This year has been a very unusual year for all the mankind globally. The COVID- 19 pandemic has
