--- a/index.html
+++ b/index.html
@@ -693,10 +693,11 @@
 
             .p-img {
                 width: 25vw;
-                -o-object-fit: cover;
+                -o-object-fit: cover; 
                 object-fit: cover;
+                object-position: cover;
                 margin-right: 50px;
-                background-color: #fff;
+                background-color: #000;
             }
 
             .principal {
