--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -221,8 +221,8 @@
         <div class="d-list">
             <h2>French Teachers</h2>
             <ol>
-                <li>Timilehin Abiodun</li>
-                <li>Nzozi Robinson</li>
+                <li>Abiodun Timilehin</li>
+                <li>Ngozi Robinson</li>
                 <li>Ufuoma Peace</li>
 
 
