--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 width: 25vw;
                 -o-object-fit: cover; 
                 object-fit: cover;
-                object-position: cover;
+                object-position: top;
                 margin-right: 50px;
                 background-color: #000;
             }
