Adding teacher pics

--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -22,6 +22,26 @@
 <p><br></p><p>The magazine committee Head Moshumi Shit supported her team by being there for them and we are always grateful to each one of them to have created history.</p>
 <p><br></p><p style="text-align: right;">- Mrs. Gursharan Shergill, Mrs. Sudipa Mitra, Mrs. Tuhina Bhalekar and Mrs. Vandana Chaturvedi.</p>
 <p><br></p>
+
+<div class="team">
+    <div class="team-member">
+        <img src="1.jpeg" alt="Team Member 1" class="member-img">
+        <h3 class="member-name">Mrs. Gursharan Shergill</h3>
+    </div>
+    <div class="team-member">
+        <img src="2.jpeg" alt="Team Member 2" class="member-img">
+        <h3 class="member-name">Mrs. Vandana Chaturvedi</h3>
+    </div>
+    <div class="team-member">
+        <img src="3.JPG" alt="Team Member 3" class="member-img">
+        <h3 class="member-name">Mrs. Sudipa Mitra</h3>
+    </div>
+    <div class="team-member">
+        <img src="4.jpeg" alt="Team Member 4" class="member-img">
+        <h3 class="member-name">Mrs. Tuhina Bhalekar</h3>
+    </div>
+</div>
+
 <p style="text-align: center;"><strong>Students&apos; Editorial</strong></p>
 <p style="text-align: left;"><br></p>
     <p>It is with great pleasure that we bring to you the 2020-21 Flying High Magazine. Although 2020 was an unpredictable year for many of us,  it opened us up to so many opportunities. Online school brought about innovations in teaching and learning alike. It seems as though in this past year we have all become tech geniuses with an expanded skill set. We thought it best that the magazine of 2020-21 reflects our experiences from the past year. It is with this spirit that we the students, with the approval of Mrs Sonali Gupta, decided to code this year&rsquo;s edition of Flying High.</p>
