--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -33,7 +33,7 @@
         <h3 class="member-name">Mrs. Vandana Chaturvedi</h3>
     </div>
     <div class="team-member">
-        <img src="3.JPG" alt="Team Member 3" class="member-img">
+        <img src="3.jpeg" alt="Team Member 3" class="member-img">
         <h3 class="member-name">Mrs. Sudipa Mitra</h3>
     </div>
     <div class="team-member">
