--- a/Committees/C_HTML/HAWC.html
+++ b/Committees/C_HTML/HAWC.html
@@ -31,7 +31,19 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>Under the precious guidance provided by Mrs Sonali Gupta, Principal, ILS and Committee Head, Mrs G Manaise, the team members conducted the following activities, successfully-</p>
+<ol>
+    <li>Ppts and Videos, related to Corona Awareness and Recent Covid -19 Global Vaccine developments and Trials had been posted regularly throughout the year by the Committee, with an aim to update Corona Awareness among students and to promote Positivity among them.</li>
+    <li>A video, comprising the members of the Committee, was executed with an aim of being positive for dealing with Covid-19 and the life Post- Corona.</li>
+    <li>Activities on account of Mental Health Awareness Week, from grades LKG to XII, in October 2020. Slogan writing for grades V and VI, Poster- making for grades VII and VIII, and an Online talk show for students of grades IX to XII on the following topics was organised-<ol>
+            <li>Importance of Mental Health</li>
+            <li>Seeing a psychiatrist is no longer a Social stigma.</li>
+            <li>Support for Mental Health</li>
+        </ol>
+    </li>
+    <li>Zenik International Olympiad for Health and Value Systems was conducted from Grades 3 to 10, in the month of October and November 2020. A variety of seminars, zoom meetings, Discussions on Healthy eating habits, Decision making, Failure management and Critical Thinking, and Online test modules were held for giving practice to the students.</li>
+</ol>
+<p style="text-align: right;">Student Head - AMISHA KUMARI, Gr XII-A.</p>
                 </div>
             </div>
         </div>
